# Hypothesis-rs

./: .gitignore  Cargo.toml  README.md  tox.ini
.github/workflows/: build.yml
bindings/charmap-python/: Cargo.toml  setup.py  tox.ini
bindings/charmap-python/benches/: bench.py
bindings/charmap-python/src/: lib.rs
bindings/database-python/: Cargo.toml  MANIFEST.in  build-sdist.sh  setup.py
bindings/database-python/benches/: bench.py
bindings/database-python/src/: lib.rs
bindings/database-python/tests-py/: test_database.py
crates/: lib.rs
crates/charmap/: Cargo.toml  generate_tables.py
crates/charmap/benches/: charmap.rs
crates/charmap/src/: categories.rs  inner.rs  lib.rs
crates/charmap/src/tables/: mod.rs  v10_0_0.rs  v11_0_0.rs  v12_0_0.rs  v12_1_0.rs  v13_0_0.rs  v9_0_0.rs
crates/database/: Cargo.toml
crates/database/benches/: database.rs
crates/database/src/: directory.rs  fetch.rs  lib.rs  memory.rs
crates/intervalset/: Cargo.toml
crates/intervalset/benches/: intervals.rs
crates/intervalset/src/: lib.rs
tests-py/: test_charmap.py  test_charmap_agreement.py
