[package]
name = "hypothesis-rs"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

[lib]
name = "hypothesis"
path = "crates/lib.rs"

[workspace]
members = [
  "crates/charmap",
  "crates/database",
  "crates/intervalset",
]
exclude = [
  "bindings/charmap-python",
  "bindings/database-python",
]

[dependencies]
database = { version = "*", path = "crates/database" }
charmap = { version = "*", path = "crates/charmap" }
intervalset = { version = "*", path = "crates/intervalset" }

[profile.release]
codegen-units = 1
lto = "on"
