[package]
name = "charmap"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ahash = "0.6"
smallvec = "1.5"

[dev-dependencies]
criterion = ">= 0.1"
test-case = "1"
# See https://github.com/frondeus/test-case/issues/60
syn = "=1.0.57"

[features]
benchmark = []

[[bench]]
name = "charmap"
harness = false
