[package]
name = "database"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sha2 = "0.9.1"
arrayvec = "0.5"

[dev-dependencies]
tempdir = "0.3"
criterion = ">= 0.1"
test-case = "1"

[features]
benchmark = []

[[bench]]
name = "database"
harness = false

[profile.release]
codegen-units = 1
lto = "on"